--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -2,7 +2,7 @@ footer {
     background-color: #fff;
     padding: 3rem 0 1rem 0;
     color: #000;
-    box-shadow: 0 50vh 0 50vh #000;
+    box-shadow: 0 50vh 0 50vh #fff;
 }
 
 footer img {
